Feat: complete registration flow with email confirmation and JWT integration
- Implemented full registration process via 3-step API: /register/init, /confirm, /register/complete
- Added support for sending confirmation code via SMTP (Gmail)
- Generated and sent 6-digit codes to email using JavaMailSender
- Stored confirmationCode and confirmation status in User entity
- Confirmed code before allowing password setup
- Integrated App Password and secure SMTP config for Gmail
- Implemented JWT generation on successful registration and login
- Separated global user role resolution logic by email domain (@edu.hse.ru → STUDENT, @hse.ru → TEACHER)
- Refactored AuthController into clean and RESTful endpoints
- Sent user data to IT-ch-backend after successful registration
- Created exception handlers via GlobalExceptionHandler with custom exceptions
- Improved security config with stateless session and permitted endpoints
- Fully removed deprecated logic and replaced with production-ready flow